# reflective

./: .gitmodules  CMakeLists.txt  README.md
cmake/: deps.cmake  find_mozjs.cmake  flags.cmake
reflective/: CMakeLists.txt  call_info_struct.hpp  config.cpp  config.hpp  ct_info.hpp  func_descriptor.hpp  function_call.cpp  function_call.hpp  id_gen.hpp  if_wont_fail.cpp  if_wont_fail.hpp  introspect.cpp  introspect.hpp  measure_point.cpp  measure_point.hpp  persistence_metadata.hpp  reason.hpp  reflective.hpp  sequence.hpp  signal.cpp  signal.hpp  stack_entry.cpp  stack_entry.hpp  storage.cpp  storage.hpp  type.hpp
samples/: CMakeLists.txt
samples/advanced/: CMakeLists.txt  main.cpp  my_class.cpp  my_class.hpp
samples/basic/: CMakeLists.txt  main.cpp
samples/introspection/: CMakeLists.txt  main.cpp
samples/neam_debug_integration/: CMakeLists.txt  main.cpp
samples/test/: CMakeLists.txt  introspect_helper.hpp  main.cpp
tools/: CMakeLists.txt
tools/callgraph2dot/: CMakeLists.txt  dot_gen.cpp  dot_gen.hpp  main.cpp
tools/common/: CMakeLists.txt  dot_gen.cpp  dot_gen.hpp
tools/quick-report/: CMakeLists.txt  graph_walker.hpp  main.cpp
tools/reflective2json/: CMakeLists.txt  main.cpp
tools/report/: dot_gen.cpp  dot_gen.hpp
tools/shell/: CMakeLists.txt  README.md  builtin.cpp  builtin.hpp  builtin_mgr.cpp  builtin_mgr.hpp  data_structure.hpp  debug.hpp  exec.hpp  flow_control.hpp  main.cpp  parse_command.cpp  parse_command.hpp  parser.hpp  reflective_builtins.cpp  reflective_builtins.hpp  reflective_manager.cpp  reflective_manager.hpp  shell.cpp  shell.hpp  streams.cpp  streams.hpp  variable_stack.cpp  variable_stack.hpp
